test/expressions/hilde/assignopLHSargIsRef.good
assignopLHSargIsRef.chpl:12: In function '=':
assignopLHSargIsRef.chpl:13: error: illegal lvalue in assignment
assignopLHSargIsRef.chpl:16: In function '*=':
assignopLHSargIsRef.chpl:17: error: illegal lvalue in assignment
